End of lesson 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(Learn_C__
         "Part 1 - The Basics/Getting Started/Hello.cpp"
         "Part 1 - The Basics/Getting Started/Exercise1.cpp"
         "Part 1 - The Basics/The Anatomy of a C++ Program/DemoConsleOutput.cpp"
+        "Part 1 - The Basics/The Anatomy of a C++ Program/InputDemo.cpp"
 )
